--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
+APP_KEYS="toBeModified1,toBeModified2, toBeModified3"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
@@ -15,7 +15,3 @@ NODE_ENV=development
 DATABASE_CLIENT=postgres
 JWT_SECRET=YOUR_JWT_SECRET
 
-# Config Plugins AWS
-AWS_BUCKET=YOUR_AWS_BUCKET
-AWS_ACCESS_KEY_ID=YOUR_AWS_ACCESS_KEY_ID=YOUR_JWT_SECRET
-AWS_ACCESS_SECRET=YOUR_AWS_ACCESS_SECRET
